some upgrades in the current code

--- a/FlappyBird/index.html
+++ b/FlappyBird/index.html
@@ -5,6 +5,7 @@
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <script language="javascript" type="text/javascript" src="Bird.js"></script>
+  <script language="javascript" type="text/javascript" src="Game.js"></script>
   <script language="javascript" type="text/javascript" src="Pipe.js"></script>
   <script language="javascript" type="text/javascript" src="FlappyBird.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
